# qml-games

./: .gitignore  CMakeLists.txt  README.md  build_wasm.bat  qml-games.pro
basketball/: CMakeLists.txt  basketball.pro  basketball.qrc  main.cpp  manifest.ini
basketball/assets/: README.md
basketball/qml/: BasketballGame.qml  MainWindow.qml
basketball/qml/Basketball/: GameItem.qml  StrengthBar.qml  qmldir
basketball/qml/Basketball/Game/: Ball.qml  Goal.qml  qmldir
basketball/qml/QmlGames/Basketball/: BasketballGame.qml  GameWindow.qml  MainWindow.qml
basketball/qml/QmlGames/Basketball/Components/: GameItem.qml  StrengthBar.qml  qmldir
basketball/qml/QmlGames/Basketball/Components/Game/: Ball.qml  Goal.qml  WorldItem.qml
collection/: collection.pro  collection.qrc  game.cpp  game.h  gamelibrary.cpp  gamelibrary.h  main.cpp
collection/qml/: CollectionMainWindow.qml  MainWindow.qml
guess/: CMakeLists.txt  guess.pro  guess.qrc  main.cpp  manifest.ini
guess/assets/: README.md
guess/qml/: GuessGame.qml  GuessGrid.qml  MainWindow.qml
guess/qml/Guess/: BottomBar.qml  ColorDotRow.qml  ColorGuessObject.qml  GuessGameObject.qml  InputBar.qml  TopBar.qml  qmldir
guess/qml/QmlGames/Guess/: GuessGame.qml  GuessGrid.qml  qmldir
guess/qml/QmlGames/Guess/Components/: ColorCodeObject.qml  ColorDot.qml  ColorGuessRow.qml  GuessFeedbackIndicator.qml  GuessGameObject.qml  InputBar.qml  TopBar.qml  qmldir
guess/resources/: guess.qrc
guess/resources/Components/: GuessFeedbackIndicator.qml  InputBar.qml  TopBar.qml
window/: MainWindow.qml  main.h  window.pri
